--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Buzzing Bee Game</title>
 </head>
 <body>
+    <canvas id="gameCanvas" width="500" height="700"></canvas>
     <h1>Buzzing Bee Game</h1>
     <script src="script.js"></script>
 </body>
