Changed the approach to the game and using CSS. Have got animated pipes so far.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <title>Buzzing Bee Game</title>
 </head>
 <body>
-    <canvas id="gameCanvas" width="500" height="700"></canvas>
     <h1>Buzzing Bee Game</h1>
+    <div id="gameBoard">
+        <div id="pipe"></div>
+        <div id="hole"></div>
+        <div id="bee"></div>
+    </div>
+    
+    
     <script src="script.js"></script>
 </body>
 </html>
