--- a/New Canvas Version/index.html
+++ b/New Canvas Version/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='style.css'>
-    <title>Canvas Flappy Bird</title>
+    <title>Buzzy Bee</title>
 </head>
 <body>
-    <script src="script.js"></script>
-    
+    <canvas id="canvas1"></canvas>
+    <script src="bee.js"></script>
+    <script src="particles.js"></script>
+    <script src="obstacles.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
